2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Design.xml,
	* doc/Gendarme.Rules.Design: With the new code in the Makefiles we don't
	need to keep the documentation files in the repository.

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSmallNamespaceRule.cs: New. Rule to warn about namespaces 
	that have very few visible types.
	* DeclareEventHandlersCorrectlyRule.cs: Reduce long chain (self-test)
	and avoid unneeded specialized of soem methods (self-test).
	* InternalNamespacesShouldNotExposeTypesRule.cs: New. Rule to warn 
	if an internal namespace declare types that are visible outside the
	assembly, making the namespace itself visible.
	* Gendarme.Rules.Design.mdp: Add new rule to MD project file.
	* Makefile.am: Add new rule and test to the build.

2008-10-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DeclareEventHandlersCorrectlyRule.cs, EnumsShouldUseInt32Rule.cs:
	Fix XML documentation to be valid (otherwise it wont generate docs)

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: Add XML documentation and 
	two [FxCopCompatibility] attributes. Ignore p/invokes since they 
	often need ref and out but should not be visible (but there's a 
	specific rule for that). 
	* AvoidVisibleNestedTypesRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute.
	* ConsiderConvertingFieldToNullableRule.cs: Add XML documentation. 
	Avoid unnecessary specialization in IsHasField (self-test).
	* ConsiderConvertingMethodToPropertyRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute. Remove duplicate check.
	* ConsiderUsingStaticTypeRule.cs: Add XML documentation. Fix 
	constructor parameter check.
	* DeclareEventHandlersCorrectlyRule.cs: Add XML documentation 